feat: add postgresql and basic auth
